# AeroFusionXR

./: .env.example  .eslintrc.js  .prettierrc  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  env.example  package.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
clients/: README.md
config/: application.yaml  database.yaml  filebeat.yml  otel-collector-config.yaml  prometheus.yml
envs/: dev.tfvars  prod.tfvars  staging.tfvars
governance/: IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
k8s/: configmap.yaml  governance-deployment.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  rbac.yaml  secrets.yaml
scripts/: Check-FileProliferation.ps1  backup.sh  bootstrap.sh  canary-test.sh  cleanup-duplicates.ps1  compliance-checker.js  comprehensive-cleanup.ts  dependency-validator.ts  deploy.sh  dev-environment.sh  duplication-detector.ts  file-proliferation-detector.js  health-check.sh  (+10 more)
services/flight-info/: README.md  app.py  pyproject.toml  requirements.txt
services/flight-info/flight_info/models/: flight.py  subscription.py
services/flight-info/flight_info/utils/: logger.py
services/flight-info/k8s/: deployment.yaml
services/flight-info/models/: flight_schema.py  scheduleSchema.py
services/flight-info/routers/: flight_router.py  schedule_router.py
services/flight-info/services/: circuit_breaker.py  fallback_service.py  flight_service.py  schedule_service.py
services/flight-info/tests/: test_flight_info.py  test_flight_status.py  test_schedule.py
(+639 files in other folders)
