[tool.poetry]
name = "flight-info"
version = "1.0.0"
description = "Real-time flight status and schedule service for AeroFusion XR"
authors = ["AeroFusion Team <team@aerofusion.io>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
motor = "^3.3.2"
redis = "^5.0.1"
pydantic = "^2.6.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
prometheus-client = "^0.19.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiohttp = "^3.9.0"
icalendar = "^5.0.11"
pytz = "^2024.1"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"] 